[project]
name = "inmoose"
version = "0.7.4-dev"
description = "InMoose: the Integrated Multi Omic Open Source Environment"
readme = "README.md"
authors = [
  {name = "Guillaume Appé", email = "guillaume@epigenelabs.com"},
  {name = "Maximilien Colange", email = "maximilien@epigenelabs.com"},
  {name = "Léa Meunier", email = "lea@epigenelabs.com"},
  {name = "Solène Weill", email = "solene@epigenelabs.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
  "anndata",
  "fastcluster",
  "mpmath>=1.1.0",
  "numpy<2.0.0",  # downgraded from <2.1.0
  "pandas",
  "patsy",
  "scipy>=1.11.0",
  "seaborn",
  "scikit-learn",
  "statsmodels",
  "matplotlib",
  "yattag"
]

[project.optional-dependencies]
doc = [
  "scanpy",
  "sphinx",
  "sphinx_rtd_theme",
  "sphinxcontrib-repl",
]

[project.urls]
Source = "https://github.com/epigenelabs/inmoose"
Documentation = "https://inmoose.readthedocs.io/en/latest/"

[build-system]
requires = ["setuptools", "numpy<2.0.0", "scipy", "Cython>=3.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"inmoose.cohort_qc" = ["qc_report.html"]