[project]
name = "inmoose"
version = "0.8.0"
description = "InMoose: the Integrated Multi Omic Open Source Environment"
readme = "README.md"
authors = [
  {name = "Guillaume Appé", email = "guillaume@epigenelabs.com"},
  {name = "Maximilien Colange", email = "maximilien@epigenelabs.com"},
  {name = "Lukaš Gazdik", email = "lukas@epigenelabs.com"},
  {name = "Antoine Gaston", email = "antoine@epigenelabs.com"},
  {name = "Léa Meunier", email = "lea@epigenelabs.com"},
  {name = "Todd Tavernier", email = "todd.tavernier@epigenelabs.com"},
  {name = "Solène Weill", email = "solene@epigenelabs.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
  "anndata",
  "fastcluster",
  "mpmath>=1.1.0",
  "numpy",
  "pandas",
  "patsy",
  "scipy>=1.11.0,<1.16",
  "seaborn",
  "scikit-learn",
  "statsmodels>=0.14.3",
  "matplotlib",
  "jinja2"
]

[project.urls]
Source = "https://github.com/epigenelabs/inmoose"
Documentation = "https://inmoose.readthedocs.io/en/latest/"

[project.optional-dependencies]
doc = [
  "scanpy",
  "sphinx",
  "sphinx_rtd_theme",
  "sphinxcontrib-repl",
]

[build-system]
requires = ["setuptools", "numpy>=2.0.0", "scipy", "Cython>=3.0.0", "wheel"]
